Copy and paste floating point number fields losses precision #34490

Closed
opened 2013-03-02 03:29:46 +01:00 by Carl Olsson · 3 comments

%%%--- Operating System, Graphics card ---
Kubuntu 12.10 64-bit, AMD Radeon HD 7870

- Blender version with error ---

SVN 54965

- Short description of error ---

When copying the contents of a floating point field where the precision of the contents exceeds the display precision (3 decimal places) the display value is copied rather than the stored value and so the extra precision is lost.

On a related note I think it's rather unpleasant that there is no way to see the actual stored value (or something closer than 3 decimal places) when editing a floating point field.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create two object.
On first object enter a value in scale Z field of 1.0002 and accept.
On first object copy value of scale Z field to clipboard.
In a text editor paste contents of clipboard.
Observe that pasted value has been stripped of of trailing "2".
On second object paste contents of clipboard in scale Z field.
Observe that second object scale Z does not match that of the first object.%%%

%%%--- Operating System, Graphics card --- Kubuntu 12.10 64-bit, AMD Radeon HD 7870 - Blender version with error --- SVN 54965 - Short description of error --- When copying the contents of a floating point field where the precision of the contents exceeds the display precision (3 decimal places) the display value is copied rather than the stored value and so the extra precision is lost. On a related note I think it's rather unpleasant that there is no way to see the actual stored value (or something closer than 3 decimal places) when editing a floating point field. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create two object. On first object enter a value in scale Z field of 1.0002 and accept. On first object copy value of scale Z field to clipboard. In a text editor paste contents of clipboard. Observe that pasted value has been stripped of of trailing "2". On second object paste contents of clipboard in scale Z field. Observe that second object scale Z does not match that of the first object.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r55005.%%%

%%%fixed r55005.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34490
No description provided.