source/blender/blenlib/BLI_string.h
@@ -226,6 +226,11 @@ void BLI_ascii_strtoupper(char *str, const size_t len)
 __attribute__((nonnull))
 #endif
 ;
+int BLI_str_rstrip_float_zero(char *str, const char pad)
+#ifdef __GNUC__
+__attribute__((nonnull))
+#endif
+;
 
 #ifdef __cplusplus
 }
